# vibe-seed

./: .env  .env.example  .eslintrc.js  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
src/: main.py
src/api/routes/: prices.py
src/api/schemas/: prices.py
src/core/: celery_app.py  config.py  database.py  redis.py
src/models/: __all_models.py  price_snapshot.py
src/modules/analyzer/: best_price.py  models.py
src/modules/notifier/: telegram.py
src/modules/scanner/: client.py  models.py  scheduler.py  tasks.py
src/web/templates/: dashboard.html
tests/unit/: test_notifier.py  test_scanner_client.py
