[tool.poetry]
name = "binance-p2p-bot"
version = "0.1.0"
description = "Monitoreo de precios P2P en Binance en VES"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = "^2.0"
alembic = "^1.13"
asyncpg = "^0.30"
redis = "^5.1"
celery = "^5.4"
httpx = "^0.27"
pydantic = "^2.7"
pydantic-settings = "^2.3"
jinja2 = "^3.1"
python-telegram-bot = "^20.8"
alpinejs = "^3.14"
tailwindcss = "^3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
httpx = "^0.27"
respx = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
